--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>service</module>
+        <module>common</module>
+        <module>service_base</module>
+        <module>service_base</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
