--- a/common/common_utils/pom.xml
+++ b/common/common_utils/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common_utils</artifactId>
+    <dependencies>
+
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
