--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.profiles.active=dev
 #??? OSS
 #???????????
 aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=
-aliyun.oss.file.keysecret=
+aliyun.oss.file.keyid=LTAI5tJUezw7FmBpbsaCLu6x
+aliyun.oss.file.keysecret=79BymW6bVuKcvphqnta6PVoxwRuSZL
 #bucket??????????????java????
 aliyun.oss.file.bucketname=zy-edu-01
