课程发布信息显示

--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.password=123456
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+#mybatis-plus.mapper-locations=classpath:xml/*.xml
+mybatis-plus.mapper-locations=classpath:com/zy/eduservice/mapper/xml/*.xml
 
-##mybatis??
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
