--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #mybatis-plus.mapper-locations=classpath:xml/*.xml
 mybatis-plus.mapper-locations=classpath:com/zy/eduservice/mapper/xml/*.xml
-
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
