添加删除失败异常

--- a/service/service_edu/src/main/resources/application.properties
+++ b/service/service_edu/src/main/resources/application.properties
@@ -18,4 +18,6 @@ spring.jackson.time-zone=GMT+8
 #mybatis-plus.mapper-locations=classpath:xml/*.xml
 mybatis-plus.mapper-locations=classpath:com/zy/eduservice/mapper/xml/*.xml
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
 #mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
