--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -13,3 +13,4 @@ aliyun.oss.file.keyid=LTAI5tJUezw7FmBpbsaCLu6x
 aliyun.oss.file.keysecret=79BymW6bVuKcvphqnta6PVoxwRuSZL
 #bucket??????????????java????
 aliyun.oss.file.bucketname=zy-edu-01
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
