--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <modules>
         <module>service</module>
         <module>common</module>
+        <module>service_cms</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
