--- a/service/service_ucenter/src/main/resources/application.properties
+++ b/service/service_ucenter/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-server.port=8005
+server.port=8006
 
-spring.application.name=service-msm
+spring.application.name=service-ucenter
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ol?serverTimezone=GMT%2B8
@@ -11,7 +11,7 @@ spring.datasource.password=123456
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-mybatis-plus.mapper-locations=classpath:com/zy/edumsm/mapper/xml/*.xml
+mybatis-plus.mapper-locations=classpath:com/zy/educenter/mapper/xml/*.xml
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
