完善订单功能

--- a/service/service_ucenter/pom.xml
+++ b/service/service_ucenter/pom.xml
@@ -15,5 +15,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.22.113.ALL</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
