删除服务器密码

--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.application.name=service-vod
 spring.profiles.active=dev
 
 
-aliyun.vod.file.keyid=LTAI5tJUezw7FmBpbsaCLu6x
-aliyun.vod.file.keysecret=79BymW6bVuKcvphqnta6PVoxwRuSZL
+aliyun.vod.file.keyid=
+aliyun.vod.file.keysecret=
 
 spring.servlet.multipart.max-file-size=1024MB
 
