--- a/service/service_oss/src/main/resources/application.properties
+++ b/service/service_oss/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.profiles.active=dev
 #??? OSS
 #???????????
 aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyid=LTAI5tJUezw7FmBpbsaCLu6x
-aliyun.oss.file.keysecret=79BymW6bVuKcvphqnta6PVoxwRuSZL
+aliyun.oss.file.keyid=
+aliyun.oss.file.keysecret=
 #bucket??????????????java????
 aliyun.oss.file.bucketname=zy-edu-01
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
